refactored nav bar to use table cells instead of flex boxes to hopefully fix flicker on mobile devices

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -60,14 +60,14 @@ nav
 	box-shadow: var(--perspectiveBoxShadow);
 	border-bottom: 2px solid black;
 	position: fixed;
-	display: flex;
 	top: 0;
 	z-index: 10;
 }
 
 #nav-content
 {
-	width: 1500px;
+	max-width: 1500px;
+	height: 100%;
 	display: block;
 	margin: 0 auto;
 	z-index: 11;
@@ -75,22 +75,16 @@ nav
 
 nav .left
 {
-	display: inline-flex;
-	justify-content: left;
-	align-items: center;
+	display: inline-block;
 	height: 100%;
 	float: left;
-	flex-basis: 40%;
 }
 
 nav .right
 {
-	display: inline-flex;
-	justify-content: right;
-	align-items: center;
+	display: inline-block;
 	height: 100%;
 	float: right;
-	flex-basis: 60%;
 }
 
 #nav-logo img
@@ -102,12 +96,36 @@ nav .right
 #nav-logo
 {
 	padding: 0 20px 0px 0px;
+	display: inline-block;
+	height: 100%;
 }
 
 #nav-logo:hover
 {
 	background: none;
 	border: none;
+}
+
+#nav-links
+{
+	display: inline-table;
+	height: 100%;
+}
+
+#nav-links a 
+{
+	display:table-cell;
+	vertical-align: middle;
+	padding: 0 25px;
+	font-size: 1.25em;
+	text-transform: uppercase;
+	text-shadow: var(--mcTextShadow);
+}
+
+#nav-links a:hover
+{
+	background: rgba(0,0,0,0.15);
+	border-bottom: solid 5px rgba(0, 0, 0, 0.15);
 }
 
 #join-now-button
@@ -130,37 +148,10 @@ nav .right
 	border: 2px solid var(--logoLimeGreen);
 }
 
-a:hover
-{
-	border-bottom: 2px dotted white;
-}
-
-nav a 
-{
-	color: white;
-	text-transform: uppercase;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	padding: 0 25px;
-	font-size: 1.25em;
-	text-shadow: var(--mcTextShadow);
-	line-height: calc(var(--navBarHeight) / 1.35);
-}
-
-nav a:hover
-{
-	background: rgba(0,0,0,0.15);
-	border-bottom: solid 5px rgba(0, 0, 0, 0.15);
-}
-
-
 header
 {
 	height: 880px;
 	width: 100vw;
-	/*background: linear-gradient(180deg, var(--newSkyBlueTop) 0%, var(--newSkyBlueBot) 75%);*/
 	background-image: url('../images/homepage/World2.png');
 	background-position: center;
 	background-size: auto 100%;
@@ -261,6 +252,11 @@ footer
 	box-shadow: var(--centeredBoxShadow);
 	border-top: 2px solid black;
 	margin-top: 50px;
+}
+
+footer a:hover
+{
+	border-bottom: 2px dotted white;
 }
 
 .fullscreen-iframe
